--- a/NoteApp/NoteApp.csproj
+++ b/NoteApp/NoteApp.csproj
@@ -302,6 +302,10 @@
     <Compile Include="Migrations\202109150809074_AddColoumnInNotestbl.designer.cs">
       <DependentUpon>202109150809074_AddColoumnInNotestbl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109161122305_AddClmnAspNetUser.cs" />
+    <Compile Include="Migrations\202109161122305_AddClmnAspNetUser.designer.cs">
+      <DependentUpon>202109161122305_AddClmnAspNetUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -559,6 +563,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202109150809074_AddColoumnInNotestbl.resx">
       <DependentUpon>202109150809074_AddColoumnInNotestbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109161122305_AddClmnAspNetUser.resx">
+      <DependentUpon>202109161122305_AddClmnAspNetUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
