--- a/NoteApp/Web.config
+++ b/NoteApp/Web.config
@@ -22,6 +22,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+        <customErrors mode="On"></customErrors>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
