--- a/NoteApp/NoteApp.csproj
+++ b/NoteApp/NoteApp.csproj
@@ -364,6 +364,19 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Project UI\Add Note.png" />
+    <Content Include="Project UI\Edit List.png" />
+    <Content Include="Project UI\Edit with Wrong id.png" />
+    <Content Include="Project UI\Empty Response.png" />
+    <Content Include="Project UI\Login.png" />
+    <Content Include="Project UI\Main Screen 3.png" />
+    <Content Include="Project UI\MainScreen.png" />
+    <Content Include="Project UI\MainScreen2.png" />
+    <Content Include="Project UI\NoteDescriptionViewer.png" />
+    <Content Include="Project UI\Search By Tag%28Notes%29.png" />
+    <Content Include="Project UI\Show Image.png" />
+    <Content Include="Project UI\Show Notes.png" />
+    <Content Include="Project UI\SignUp.png" />
     <Content Include="Scripts\addNote.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
